feat: calculate tf-idf and use BTreeMap for key sorted alphabetically

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <form id="submit" action="">
     <input id="query" type="text" placeholder="" >
   </form>
+
+  <output id="output"></output>
   <script src="./index.js"></script>
 </body>
 </html>
